[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-knowledge-graph-hv"
version = "2.0.0"
description = "A lightweight knowledge graph engine for codebases with CLI, API, and MCP support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Knowledge Graph Team"}
]
keywords = ["knowledge-graph", "code-analysis", "ast", "mcp", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.9.0",
    "fastapi>=0.100.0",
    "watchdog>=3.0.0",
    "uvicorn[standard]>=0.23.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
]

[project.scripts]
kg = "cli.main:main"
kg-mcp = "mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/code-knowledge-graph"
Repository = "https://github.com/yourusername/code-knowledge-graph"
Issues = "https://github.com/yourusername/code-knowledge-graph/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "api*", "cli*", "mcp*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
